MVVM architecture - app modification; Started to working on getting data from excel file

--- a/PingApp.csproj
+++ b/PingApp.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="icons8-ping-96.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.0.8" />
     <PackageReference Include="NLog" Version="5.2.8" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.8" />
     <PackageReference Include="Serilog" Version="3.1.1" />
@@ -16,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Resource Include="icons8-ping-96.png" />
   </ItemGroup>
 
 </Project>
