--- a/PingApp.csproj
+++ b/PingApp.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Dapper" Version="2.1.28" />
     <PackageReference Include="EPPlus" Version="7.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
       <PrivateAssets>all</PrivateAssets>
