--- a/PingApp.csproj
+++ b/PingApp.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Dapper" Version="2.1.28" />
     <PackageReference Include="EPPlus" Version="7.0.8" />
     <PackageReference Include="Fluent.Ribbon" Version="10.0.4" />
