--- a/PingApp.csproj
+++ b/PingApp.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <None Remove="icons8-ping-96.png" />
     <None Remove="Resources\cancel.png" />
+    <None Remove="Resources\check_all.png" />
     <None Remove="Resources\config_template.png" />
     <None Remove="Resources\excel_config.png" />
     <None Remove="Resources\excel_export.png" />
@@ -18,6 +19,7 @@
     <None Remove="Resources\exchange.png" />
     <None Remove="Resources\folder_open.png" />
     <None Remove="Resources\folder_select.png" />
+    <None Remove="Resources\uncheck_all.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -44,6 +46,7 @@
   <ItemGroup>
     <Resource Include="icons8-ping-96.png" />
     <Resource Include="Resources\cancel.png" />
+    <Resource Include="Resources\check_all.png" />
     <Resource Include="Resources\config_template.png" />
     <Resource Include="Resources\excel_config.png" />
     <Resource Include="Resources\excel_export.png" />
@@ -51,6 +54,7 @@
     <Resource Include="Resources\exchange.png" />
     <Resource Include="Resources\folder_open.png" />
     <Resource Include="Resources\folder_select.png" />
+    <Resource Include="Resources\uncheck_all.png" />
   </ItemGroup>
 
   <ItemGroup>
