--- a/PingApp.csproj
+++ b/PingApp.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <None Remove="icons8-ping-96.png" />
+    <None Remove="internalDb.db" />
     <None Remove="Resources\cancel.png" />
     <None Remove="Resources\check_all.png" />
     <None Remove="Resources\config_template.png" />
@@ -51,6 +52,9 @@
 
   <ItemGroup>
     <Resource Include="icons8-ping-96.png" />
+    <Resource Include="internalDb.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\cancel.png" />
     <Resource Include="Resources\check_all.png" />
     <Resource Include="Resources\config_template.png" />
@@ -91,6 +95,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
