--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,25 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=internalDb.db"
+    "DefaultConnection": "internalDb.db"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+        "Microsoft.EntityFrameworkCore.Infrastructure": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   }
 }
