Loging update - got rid of ILogger interface in classes. Now using common static class

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,7 +19,14 @@
           "path": "logs.txt",
           "rollingInterval": "Day"
         }
+      },
+      {
+        "Name": "Console"
       }
-    ]
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "PingApp"
+    }
   }
 }
